<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/secqTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/security_question"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sec1Btn"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/secret_question1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secqTv" />

    <Button
        android:id="@+id/secq2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/secret_question2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sec1Btn" />

    <Button
        android:id="@+id/secq3Btn"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:text="@string/security_question3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secq2Btn" />

    <Button
        android:id="@+id/secq4Btn"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:text="@string/security_question4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secq3Btn" />

    <Button
        android:id="@+id/secq5Btn"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:text="@string/security_question5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secq4Btn" />
</androidx.constraintlayout.widget.ConstraintLayout>